moved properties not attached to scope to factory

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
+.header {
+  /*margin-right: auto;*/
+  /*margin-left: auto;*/
+  text-align: center;
+  /*position: relative;*/
+  margin-top: 2em;
+
+}
 .board {
   margin-right: auto;
   margin-left: auto;
-  margin-top: 8em;
+  margin-top: 6em;
   height: 12em;
   width: 12em;
   text-align: center;
@@ -26,12 +34,15 @@
   width: 4em;
   float: left;
   position: relative;
-  z-index: 1;
+  display: inline-block;
+  /*z-index: 1;*/
+
 }
 .text {
-  padding-top: 1.5em;
+  /*padding-top: 1.5em;*/
   position: relative;
-  z-index: 0;
+  vertical-align: middle;
+  /*z-index: 0;*/
 }
 /*td {
   text-align: center;
