--- a/views/home.html
+++ b/views/home.html
@@ -1,35 +1,37 @@
+<div class="header">Unbeatable Tic-Tac-Toe
+</div>
 <div class="board">
   <div class="row1">
     <div class="square" id="topLeft" ng-click="playerMove($event)">
-      <div class="text corner"></div>
+      <!-- <div class="text corner">1</div> -->
     </div>
     <div class="square" id="topMiddle" ng-click="playerMove($event)">
-      <div class="text edge"></div>
+      <!-- <div class="text edge"></div> -->
     </div>
     <div class="square" id="topRight" ng-click="playerMove($event)">
-      <div class="text corner"></div>
+      <!-- <div class="text corner"></div> -->
     </div>
   </div>
   <div class="row2">
     <div class="square" id="middleLeft" ng-click="playerMove($event)">
-      <div class="text edge"></div>
+      <!-- <div class="text edge"></div> -->
     </div>
     <div class="square" id="middleMiddle" ng-click="playerMove($event)">
-      <div class="text center"></div>
+      <!-- <div class="text center"></div> -->
     </div>
     <div class="square" id="middleRight" ng-click="playerMove($event)">
-      <div class="text edge"></div>
+      <!-- <div class="text edge"></div> -->
     </div>
   </div>
   <div class="row3">
     <div class="square" id="bottomLeft" ng-click="playerMove($event)">
-      <div class="text corner"></div>
+      <!-- <div class="text corner"></div> -->
     </div>
     <div class="square" id="bottomMiddle" ng-click="playerMove($event)">
-      <div class="text edge"></div>
+      <!-- <div class="text edge"></div> -->
     </div>
     <div class="square" id="bottomRight" ng-click="playerMove($event)">
-      <div class="text corner"></div>
+      <!-- <div class="text corner"></div> -->
     </div>
   </div>
 </div>
