--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
   margin-top: 2em;
 
 }
+.result {
+  text-align: center;
+  /*position: relative;*/
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-top: 2em;
+}
 .board {
   margin-right: auto;
   margin-left: auto;
@@ -14,6 +22,9 @@
   width: 12em;
   text-align: center;
   border: 1px solid black;
+  position: relative;
+  left: 0;
+  right: 0;
 }
 .row1 {
   height: 4em;
