changed back fromo font awesome

--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
 <div class="result" ng-show="computerWins()">You Lose!</div>
 <div class="result" ng-show="tie()">It's a Tie!</div>
 <div class="board">
+    <span></span>
     <div class="square" id="topLeft" ng-click="playerMove($event)">
       <!-- <div class="text corner">1</div> -->
     </div>
