--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,12 @@
   float: left;
   position: relative;
   display: inline-block;
+  vertical-align: middle;
   /*z-index: 1;*/
 
+}
+span{
+  line-height:8em;
 }
 .text {
   /*padding-top: 1.5em;*/
