vertically center Xs and Os

--- a/views/home.html
+++ b/views/home.html
@@ -2,34 +2,15 @@
 <div class="result" ng-show="computerWins()">You Lose!</div>
 <div class="result" ng-show="tie()">It's a Tie!</div>
 <div class="board">
-    <span></span>
-    <div class="square" id="topLeft" ng-click="playerMove($event)">
-      <!-- <div class="text corner">1</div> -->
-    </div>
-    <div class="square" id="topMiddle" ng-click="playerMove($event)">
-      <!-- <div class="text edge"></div> -->
-    </div>
-    <div class="square" id="topRight" ng-click="playerMove($event)">
-      <!-- <div class="text corner"></div> -->
-    </div>
-    <div class="square" id="middleLeft" ng-click="playerMove($event)">
-      <!-- <div class="text edge"></div> -->
-    </div>
-    <div class="square" id="middleMiddle" ng-click="playerMove($event)">
-      <!-- <div class="text center"></div> -->
-    </div>
-    <div class="square" id="middleRight" ng-click="playerMove($event)">
-      <!-- <div class="text edge"></div> -->
-    </div>
-    <div class="square" id="bottomLeft" ng-click="playerMove($event)">
-      <!-- <div class="text corner"></div> -->
-    </div>
-    <div class="square" id="bottomMiddle" ng-click="playerMove($event)">
-      <!-- <div class="text edge"></div> -->
-    </div>
-    <div class="square" id="bottomRight" ng-click="playerMove($event)">
-      <!-- <div class="text corner"></div> -->
-    </div>
+    <div class="square" id="topLeft" ng-click="playerMove($event)"></div>
+    <div class="square" id="topMiddle" ng-click="playerMove($event)"></div>
+    <div class="square" id="topRight" ng-click="playerMove($event)"></div>
+    <div class="square" id="middleLeft" ng-click="playerMove($event)"></div>
+    <div class="square" id="middleMiddle" ng-click="playerMove($event)"></div>
+    <div class="square" id="middleRight" ng-click="playerMove($event)"></div>
+    <div class="square" id="bottomLeft" ng-click="playerMove($event)"></div>
+    <div class="square" id="bottomMiddle" ng-click="playerMove($event)"></div>
+    <div class="square" id="bottomRight" ng-click="playerMove($event)"></div>
 </div>
 <div class="newGame" ng-click="resetBoard()">
   New Game
