--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
   right: 0;
   margin-top: 2em;
 }
+i {
+  font-size: 200%
+}
 .board {
   margin-right: auto;
   margin-left: auto;
@@ -34,6 +37,7 @@
   display: inline-block;
   vertical-align: middle;
   line-height: 8em;
+  /*font-size: 200%;*/
 
   /*z-index: 1;*/
 
