--- a/views/home.html
+++ b/views/home.html
@@ -12,6 +12,6 @@
     <div class="square" id="bottomMiddle" ng-click="playerMove($event)"><i></i></div>
     <div class="square" id="bottomRight" ng-click="playerMove($event)"><i></i></div>
 </div>
-<div class="newGame" ng-click="resetBoard()">
+<button class="newGame" ng-click="resetBoard()">
   New Game
-</div>
+</button>
