--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   text-align: center;
 }
 
+a {
+  text-align: center;
+  display: block;
+}
+
 /******* End Result Settings ********/
 .result {
   position: absolute;
