--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,5 @@
-<div class="header">Unbeatable Tic-Tac-Toe</div>
+<div class="header">Unbeatable Tic-Tac-Toe </div>
+<a ui-sref="docs">(Documentation)</a>
 <div class="result" ng-show="computerWins()">You Lose!</div>
 <div class="result" ng-show="tie()">It's a Tie!</div>
 <div class="board">
